# ep-election-turnout

./: Pipfile  README.md  pyproject.toml
data/2014/raw/: bel.csv  bgr.csv  deu_meta.csv  esp.csv  est.csv  fin.csv  ltu.csv  pol.xls  prt.csv  svn.csv
data/2019/raw/: aut.csv  bel.csv  bel_cantons.json  cze.csv  swe.xls
data/processed/aut/: aut.dbf
data/processed/bel/: bel.dbf  bel.shx
data/processed/bgr/: bgr.dbf  bgr.shx
data/processed/cze/: cze.shx
data/processed/deu/: deu.dbf  deu.shx
data/processed/est/: est.shx
data/processed/gbr/: gbr.shx
data/processed/grc/: grc.dbf
data/processed/hrv/: hrv.dbf  hrv.shp  hrv.shx
data/processed/hun/: hun.dbf
data/processed/irl/: irl.shp  irl.shx
data/processed/ita/: ita.dbf
data/processed/ltu/: ltu.shx
data/processed/lva/: lva.dbf  lva.shx
data/processed/mlt/: mlt.dbf  mlt.shp
data/processed/nld/: nld.dbf
data/processed/prt/: prt.dbf  prt.shx
data/raw/: aut.csv  cze.csv  deu.csv  dnk.csv  fra.csv  gbr-ni.csv  gbr.csv  grc.csv  ita.csv  lva.csv  rou.xlsx  svk.csv  swe.xls
notebooks/2014/: aut.ipynb  bel.ipynb  bgr.ipynb  cyp.ipynb  deu.ipynb  dnk.ipynb  esp.ipynb  fra.ipynb  gbr.ipynb  grc.ipynb  hrv.ipynb  irl.ipynb  ltu.ipynb  lva.ipynb  master.ipynb  pol.ipynb  prt.ipynb  rou.ipynb  svk.ipynb  svn.ipynb  swe.ipynb
notebooks/2019/: aut.ipynb  bel.ipynb  bgr.ipynb  cyp.ipynb  cze.ipynb  swe.ipynb
notebooks/exploratory/: bel.ipynb  bgr.ipynb  cze.ipynb  deu.ipynb  est.ipynb  fin.ipynb  fra.ipynb  hrv.ipynb  hun.ipynb  ita.ipynb  lux.ipynb  master.ipynb  mlt.ipynb  nld.ipynb  svk.ipynb
(+183 files in other folders)
