[tool.poetry]
name = "ep-election-turnout"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.1.4"
jupyterlab = "^4.0.9"
matplotlib = "^3.8.2"
seaborn = "^0.13.0"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
lxml = "^4.9.4"
html5lib = "^1.1"
xlrd = "^2.0.1"
geopandas = "^0.14.1"
fuzzywuzzy = "^0.18.0"
python-Levenshtein = "^0.23.0"
descartes = "^1.1.0"
mapclassify = "^2.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
